Individual YAMLs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  namespace: kong
  annotations:
    kuma.io/sidecar-injection: enabled
