Individual YAMLs/1 - api-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: kong
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      annotations:
        "prometheus.io/scrape": "true"
        "prometheus.io/port": "9102"
      labels:
        app: api
        version: "1"
    spec:
      containers:
        - name: api
          image: codydearkland/api-tier:v16
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kong
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
