Individual YAMLs/db.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: db
    namespace: kong
  spec:
    selector:
      matchLabels:
        app: db
    replicas: 1
    template:
      metadata:
        labels:
          app: db
      spec:
        containers:
          - name: db
            image: codydearkland/db-tier:latest
            ports:
              - containerPort: 5432
                protocol: TCP
---
  apiVersion: v1
  kind: Service
  metadata:
    name: db
    namespace: kong
  spec:
    selector:
      app: db
    ports:
      - protocol: TCP
        port: 5432
        targetPort: 5432
