Individual YAMLs/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontreact
  namespace: kong
  labels:
    app: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      annotations:
        "prometheus.io/scrape": "true"
        "prometheus.io/port": "9102"
        "ingress.kubernetes.io/service-upstream": "true"
      labels:
        app: react
        version: "2"
    spec:
      containers:
        - name: frontreact
          image: codydearkland/demo-react:v2
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontreact
  namespace: kong
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: react
