Individual YAMLs/redis.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: redis
    namespace: kong
  spec:
    selector:
      matchLabels:
        app: redis
    replicas: 1
    template:
      metadata:
        annotations:
          "prometheus.io/scrape": "true"
          "prometheus.io/port": "9102"
        labels:
          app: redis
      spec:
        containers:
          - name: redis
            image: redis:latest
            ports:
              - containerPort: 6379
                protocol: TCP
---
  apiVersion: v1
  kind: Service
  metadata:
    name: redis
    namespace: kong
  spec:
    selector:
      app: redis
    ports:
      - protocol: TCP
        port: 6379
        targetPort: 6379
