Individual YAMLs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /
            backend: 
              serviceName: front
              servicePort: 80
